--- a/mainApp/pom.xml
+++ b/mainApp/pom.xml
@@ -18,8 +18,12 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <version>4.12</version>
+    </dependency>
+    <dependency>
+    	<groupId>javax.xml.bind</groupId>
+    	<artifactId>jaxb-api</artifactId>
+    	<version>2.2.12</version>
     </dependency>
   </dependencies>
 </project>
