--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>fr.insa.toulouse.tp2_g2</groupId>
   <artifactId>swim</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>swim</name>
   <url>http://maven.apache.org</url>
@@ -14,21 +14,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>fr.insa.toulouse.tp2_g2</groupId>
-      <artifactId>consumer</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>fr.insa.toulouse.tp2_g2</groupId>
-      <artifactId>mainApp</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.SWIM</groupId>
-      <artifactId>Producer</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>Producer</module>
+    <module>consumer</module>
+	<module>mainApp</module>
+  </modules> 
 </project>
