--- a/mainApp/pom.xml
+++ b/mainApp/pom.xml
@@ -35,5 +35,10 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>3.4.2</version>
+		</dependency>
 	</dependencies>
 </project>
