--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -26,6 +26,16 @@
 			<artifactId>amqp-client</artifactId>
 			<version>3.4.2</version>
 		</dependency>
+		    	<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>1.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.1.3</version>
+		</dependency>
   </dependencies>
   
     <build>
