|marjorie|producer & mainApp pom modification + Messages updated|

--- a/mainApp/pom.xml
+++ b/mainApp/pom.xml
@@ -40,5 +40,10 @@
 			<artifactId>amqp-client</artifactId>
 			<version>3.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+		</dependency>
 	</dependencies>
 </project>
