--- a/Producer/pom.xml
+++ b/Producer/pom.xml
@@ -51,7 +51,12 @@
             <version>2.4.0</version>
             <type>jar</type>
         </dependency>
-
+		 <dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+		
     </dependencies>
 
     <build>
