--- a/Producer/pom.xml
+++ b/Producer/pom.xml
@@ -15,6 +15,7 @@
     </properties>
     
     <dependencies>
+
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
@@ -45,6 +46,12 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -55,6 +62,11 @@
             <artifactId>jackson-core</artifactId>
             <version>2.4.0</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>3.4.2</version>
         </dependency>
 
     </dependencies>
