Use all of the messaging classes from the mainApp. Modify code to fit to the changes to the new messaging.

--- a/Producer/pom.xml
+++ b/Producer/pom.xml
@@ -52,6 +52,12 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>fr.insa.toulouse.tp2_g2</groupId>
+            <artifactId>mainApp</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
