--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -54,7 +54,12 @@
       <version>${powermock.version}</version>
       <scope>test</scope>
    </dependency>
-
+	<dependency>
+		<groupId>org.json</groupId>
+		<artifactId>json</artifactId>
+		<version>20141113</version>
+	</dependency>
+  
   </dependencies>
   
     <build>
