--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -49,6 +49,12 @@
       <scope>test</scope>
    </dependency>
    <dependency>
+            <groupId>fr.insa.toulouse.tp2_g2</groupId>
+            <artifactId>mainApp</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+   <dependency>
       <groupId>org.powermock</groupId>
       <artifactId>powermock-api-mockito</artifactId>
       <version>${powermock.version}</version>
